classDiagram
class PromoMediaVM {
id: int
postId: int
url: String
mediaType: MediaType?
createdAt: DateTime
updatedAt: DateTime
isVideo(): bool
isImage(): bool
}
Cacheable <|-- PromoMediaVM
PromoMediaVM ..> MediaType
PromoMediaVM ..> DateTime
class LiveStreamProductsVM 
id: int
name: String
price: double
quantity: int
medias: List<MediaModel>

Cacheable <|-- LiveStreamProductsVM
class LiveStreamChatVM 
id: int
username: String
profileImage: String
text: String

Cacheable <|-- LiveStreamChatVM
class ChatRoomVM 
id: int
merchantName: String
merchantProfileImage: String
timeAgo: String
latestText: String

Cacheable <|-- ChatRoomVM
class PostVM 
id: int
merchantId: int
caption: String?
promoMedias: List<PromoMediaModel>?
createdAt: DateTime
updatedAt: DateTime
likesCount: int
savesCount: int
isLiked: bool
isSaved: bool
merchant: PostMerchantVM
products: List<PostProductVM>

Cacheable <|-- PostVM
PostVM ..> DateTime
PostVM ..> PostMerchantVM
class PostProductVM 
id: int
name: String
medias: List<MediaModel>
price: double
quantity: int
description: String
category: ProductCategory
isAddedToCart: bool

Cacheable <|-- PostProductVM
PostProductVM ..> ProductCategory
class PostMerchantVM 
id: int
name: String
bio: String
profileImage: String
username: String
rating: double

Cacheable <|-- PostMerchantVM
class ChatVM 
id: int
isMine: bool
text: String
createdAt: DateTime
updatedAt: DateTime

Cacheable <|-- ChatVM
ChatVM ..> DateTime
class CartVM 
merchant: CartMerchantVM
items: List<CartItemVM>

Cacheable <|-- CartVM
CartVM ..> CartMerchantVM
class CartItemVM 
id: int
userId: int
productId: int
name: String
price: double
image: String
quantity: int
availableQuantity: int
createdAt: DateTime
updatedAt: DateTime

CartItemVM ..> DateTime
class CartMerchantVM 
id: int
username: String
profileImage: String

class UserProfileLikedSavedPostsVM 
id: int
imageUrl: String
caption: String

Cacheable <|-- UserProfileLikedSavedPostsVM
class UserProfileVM 
id: int
username: String
profileImageUrl: String
bio: String
createdAt: DateTime
updatedAt: DateTime

Cacheable <|-- UserProfileVM
UserProfileVM ..> DateTime
class MerchantPostsVM 
id: int
caption: String
imageUrl: String

Cacheable <|-- MerchantPostsVM
class MerchantProductsVM 
id: int
name: String
image: String
quantity: int
price: double
isAddedToCart: bool

Cacheable <|-- MerchantProductsVM
class MerchantLivestreamsVM 
id: int
title: String
thumbnailUrl: String

Cacheable <|-- MerchantLivestreamsVM
class OrderVM 
id: int
merchantName: String
merchantProfileImage: String
status: String
products: List<OrderProductVM>
totalPrice: int
createdAt: DateTime

Cacheable <|-- OrderVM
OrderVM ..> DateTime
class OrderProductVM 
id: int
productName: String
productImageUrl: String
quantity: int

Cacheable <|-- OrderProductVM
class MerchantVM 
id: int
username: String
profileImage: String
bio: String
rating: double
createdAt: DateTime
updatedAt: DateTime

Cacheable <|-- MerchantVM
MerchantVM ..> DateTime
class LiveStreamVM 
id: int
merchantId: int
title: String
streamUrl: String
thumbnailUrl: String?
viewCount: int
createdAt: String
updatedAt: String
merchantName: String?
merchantProfileImage: String?
productNames: List<String>?
chatCount: int

Cacheable <|-- LiveStreamVM
class UserVM 
id: int
username: String
profileImageUrl: String?
bio: String?
createdAt: DateTime
updatedAt: DateTime

Cacheable <|-- UserVM
UserVM ..> DateTime
class ProductMediaVM {
id: int
productId: int
url: String
mediaType: String?
createdAt: DateTime
updatedAt: DateTime
isVideo(): bool
isImage(): bool
}
Cacheable <|-- ProductMediaVM
ProductMediaVM ..> DateTime
class MerchantChatVM 
id: int
isMine: bool
text: String
createdAt: DateTime
updatedAt: DateTime

Cacheable <|-- MerchantChatVM
MerchantChatVM ..> DateTime
class ProductVM {
id: int
merchantId: int
name: String
description: String?
price: double
quantity: int
createdAt: DateTime
updatedAt: DateTime
merchantName: String?
merchantProfileImage: String?
mediaUrls: List<String>?
categories: List<String>?
primaryImageUrl(): String?
}
Cacheable <|-- ProductVM
ProductVM ..> DateTime
class MerchantLiveStreamsVM 
id: int
title: String
streamUrl: String
thumbnailUrl: String?
viewCount: int
createdAt: String
updatedAt: String
products: List<MerchantLiveStreamsProductsVM>?

Cacheable <|-- MerchantLiveStreamsVM
class MerchantLiveStreamsProductsVM 
id: int
name: String
price: double
quantity: int
imageUrls: List<String>

Cacheable <|-- MerchantLiveStreamsProductsVM
class OrderMerchantVM 
id: int
username: String
userProfileImage: String
status: OrderStatusEnum
products: List<OrderProductMerchantVM>
totalPrice: int
createdAt: DateTime

Cacheable <|-- OrderMerchantVM
OrderMerchantVM ..> OrderStatusEnum
OrderMerchantVM ..> DateTime
class OrderProductMerchantVM 
id: int
productName: String
productImageUrl: String
quantity: int

Cacheable <|-- OrderProductMerchantVM
class MerchantChatRoomVM 
id: int
buyerName: String
buyerProfileImage: String
timeAgo: String
latestText: String

Cacheable <|-- MerchantChatRoomVM
